--- a/product.html
+++ b/product.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="shortcut icon" type="x-icon" href="https://www.freepnglogos.com/uploads/shopee-logo-png/shopee-logo-shop-with-the-gentlemen-collection-and-win-the-shopee-0.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="assets\css\base.css">
     <link rel="stylesheet" href="assets/css/shop.css">
@@ -424,8 +425,7 @@
                                 <div class="product-specification-details-bottom">
                                     <header class="product-specification-details-header">MÔ TẢ SẢN PHẨM</header>
                                     <div class="product-specification-details-item-describe">
-                                        <p class="product-specification-details-item-describe-paragraph">
-                                            TÍNH NĂNG NỔI BẬT
+                                        <p class="product-specification-details-item-describe-paragraph">TÍNH NĂNG NỔI BẬT 
                                             Cảm biến CMOS full-frame 26.2 megapixels
                                             Bộ xử lý hình ảnh DIGIC 8
                                             - 4.779 vị trí lấy nét chọn lọc
@@ -758,10 +758,10 @@
                         </div>
                         <div class="footer-license-certification">
                             <a class="footer-license-certification-link" href="">
-                                <img class="footer-license-certification-img" src="http://online.gov.vn/Content/EndUser/LogoCCDVSaleNoti/logoCCDV.png" alt="">
+                                <img class="footer-license-certification-img" src="/assets/img/logoCCDV.png" alt="">
                             </a>
                             <a class="footer-license-certification-link" href="">
-                                <img class="footer-license-certification-img" src="http://online.gov.vn/Content/EndUser/LogoCCDVSaleNoti/logoCCDV.png" alt="">
+                                <img class="footer-license-certification-img" src="/assets/img/logoCCDV.png" alt="">
                             </a>
                             <!-- <a class="footer-license-certification-link" href="">
                                 <img class="footer-license-certification-img" src="" alt="">
@@ -779,5 +779,8 @@
             </div>
         </footer>
     </div>
+
+
+    <script src="/shop.js"></script>
 </body>
 </html>
