--- a/shop.html
+++ b/shop.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sản Phẩm</title>
+    <link rel="shortcut icon" type="x-icon" href="https://www.freepnglogos.com/uploads/shopee-logo-png/shopee-logo-shop-with-the-gentlemen-collection-and-win-the-shopee-0.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="assets\css\base.css">
     <link rel="stylesheet" href="assets/css/shop.css">
@@ -1157,10 +1158,10 @@
                         </div>
                         <div class="footer-license-certification">
                             <a class="footer-license-certification-link" href="">
-                                <img class="footer-license-certification-img" src="http://online.gov.vn/Content/EndUser/LogoCCDVSaleNoti/logoCCDV.png" alt="">
+                                <img class="footer-license-certification-img" src="/assets/img/logoCCDV.png" alt="">
                             </a>
                             <a class="footer-license-certification-link" href="">
-                                <img class="footer-license-certification-img" src="http://online.gov.vn/Content/EndUser/LogoCCDVSaleNoti/logoCCDV.png" alt="">
+                                <img class="footer-license-certification-img" src="/assets/img/logoCCDV.png" alt="">
                             </a>
                             <!-- <a class="footer-license-certification-link" href="">
                                 <img class="footer-license-certification-img" src="" alt="">
